[TSP] Added primitive automatic solver.

--- a/tsp/index.html
+++ b/tsp/index.html
@@ -22,6 +22,7 @@
                     <!-- <button onclick="showCode()">Show JavaScript</button> -->
                     <button onclick="runCode()">Run</button>
                     <button onclick="showOptimalMarkings()">Show Optimal Markings</button>
+                    <button onclick="solveBlockly()">Solve</button>
                     <button onclick="reset()">Reset</button>
                 </p>
             </div>
